--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     <!-- ======================================================================= -->
     <parent>
         <groupId>org.apache.sling</groupId>
-        <artifactId>sling</artifactId>
-        <version>34</version>
+        <artifactId>sling-bundle-parent</artifactId>
+        <version>35</version>
         <relativePath />
     </parent>
 
@@ -36,7 +36,6 @@
         releasing to only increase the first part, unless the module provides support for a newer version of the HTL specification.
     -->
     <version>1.1.3-1.4.0-SNAPSHOT</version>
-    <packaging>bundle</packaging>
 
     <name>Apache Sling Scripting HTL Java Compiler</name>
 
@@ -53,7 +52,6 @@
   </scm>
 
     <properties>
-        <jacoco.maven.plugin.version>0.7.9</jacoco.maven.plugin.version>
         <sling.java.version>8</sling.java.version>
     </properties>
 
@@ -62,36 +60,6 @@
     <!-- ======================================================================= -->
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>scr-metadata</id>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <exportScr>true</exportScr>
-                    <instructions>
-                        <Provide-Capability>
-                            io.sightly.compiler.java; version:Version=1.0,
-                            io.sightly.compiler.java; version:Version=1.1,
-                            io.sightly.compiler.java; version:Version=1.2,
-                            io.sightly.compiler.java; version:Version=1.3,
-                            io.sightly.compiler.java; version:Version=1.3.1,
-                            io.sightly.compiler.java; version:Version=1.4
-                        </Provide-Capability>
-                        <Require-Capability>
-                            io.sightly.runtime; filter:="(&amp;(version&gt;=1.0)(!(version&gt;=2.0)))"
-                            io.sightly.compiler; filter:="(&amp;(version&gt;=1.0)(version&lt;=1.4))",
-                        </Require-Capability>
-                    </instructions>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -123,43 +91,6 @@
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>coverage-report</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${jacoco.maven.plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>default-prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>default-report</id>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                                <configuration>
-                                    <includes>
-                                        <include>org/apache/sling/scripting/sightly/**/*</include>
-                                    </includes>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <!-- ======================================================================= -->
     <!-- D E P E N D E N C I E S                                                 -->
     <!-- ======================================================================= -->
@@ -168,7 +99,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.scripting.sightly.compiler</artifactId>
-            <version>1.1.3-1.4.0-SNAPSHOT</version>
+            <version>1.2.0-1.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
