--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <version>1.1.3-1.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.compiler</artifactId>
+            <version>2.3.7-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- OSGi -->
         <dependency>
